
5.2b1 -> 5.3a1
    - devzero2000: add security CFLAGS for GCC if supported
    - jbj: dbi: configure new indices with 4b join keys and duplicates.
    - jbj: dbi: generate additional indices.
    - jbj: dbi: add db->associate_foreign.
    - devzero2000: add rpm-genenerate-loop-test-harness.sh 
    - devzero2000: add INSTALL.developer
    - jbj: order: fix: check current package for files/dirs before other packages.
    - jbj: order: fix: avoid self-looping for man-pages (and pkgs w no requires)
    - jbj: rpmdb: use DB_CONFIG.
    - jbj: rpmdb: install DB_CONFIG if not already present.
    - jbj: rpmdb: revert the DBENV->set_data_dir() attempt when re-opening. Not
	the right fix, and spews an error on 4.8.24 with lazy opens in chroot.
    - jbj: rpmdb: stub-in DB_CONFIG.in (no parameters and uninstalled for now).
    - jbj: upgrade to db-4.8.24.
    - jbj: spook: install spooktool next to semodule.
    - jbj: spook: embed the "spook" DSL just like augeas (nee "augtool").
    - jbj: augeas: change the DSL embedding syntax from "augtool" to "augeas".
    - jbj: haul out some trash.
    - jbj: augtool: morph the rpmioC command table to popt.
    - jbj: spooktool: morph the rpmioC command table to popt.
    - jbj: add spooktool (i.e. semodule with an augtool-like interpreter).
    - jbj: rpmsm: ensure pool memory is initialized correctly.
    - jbj: rpmaug: use the rpmio parser.
    - jbj: rpmio: expose the toy parser and command table used by augtool.
    - jbj: retrofit getline for augtool to build more portably.
    - jbj: retrofit asprintf for augtool to build more portably.
    - jbj: AutoFu for -lreadline to be included in spooktool(8).
    - jbj: rpmsm: stub-in a state machine for handling policy operations lazily.
    - jbj: rpmsm: add RPMSM_FLAGS_CONNECT for Tresys dain bramaged patches.
    - jbj: rpmsm: use an iob to return spewage.
    - jbj: rpmsm: permit *RE's with -l,--list command. hmmm, semodule todo++.